Update Stock Sentiment Analysis based on News headlines using NLP (Kaggle competition).ipynb

--- a/Stock Sentiment Analysis based on News headlines using NLP (Kaggle competition).ipynb
+++ b/Stock Sentiment Analysis based on News headlines using NLP (Kaggle competition).ipynb
@@ -404,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# diving data into train and test data sets"
+    "# dividing data into train and test data sets"
    ]
   },
   {
